# tdd_learning

./: README.md  meson.build
include/: Checkout.h
src/: CheckOut.cpp  main.cpp  meson.build
test/: GMockTest.cpp  checkoutExample.md  meson.build  test_checkoutExample.cpp
